# yandexcup_2023

./: README.md  pyproject.toml  settings.py  tox.ini
notebooks/: prediction.csv  solution.ipynb
src/data/: __init__.py  utils.py
src/models/: AttnBiLSTM.py  AttnLSTM.py  BERT.py  BaselineModel.py  BiLSTM.py  CompressBERT.py  CompressLSTMBERT.py  ConvBERT.py  LSTMBERT.py  TransformerModel.py  __init__.py  predict_model.py  train_model.py
src/models/attention/: multi_head.py  single.py
src/models/losses/: FocalLoss.py
